# Home_work_modul_02

./: README.md
docker/Modified_FinalProject/: Bot.py  Dockerfile  logs.txt
pipenv/Modified_FinalProject/: __main__.py  logs.txt
poetry/Modified_FinalProject/: pyproject.toml
