[tool.poetry]
name = "finalprodject"
version = "0.1.0"
description = "Personal Assistant"
authors = ["Max <maximkhersonua@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.7"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
